--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,3 +1,8 @@
-body{
-    background-color: rgb(76, 102, 93);
+#container{
+    margin-top: -150px;
+
+}
+
+.form-group{
+    padding-bottom: 25px;
 }
