--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,25 +1,20 @@
 
-<!-- 
-<input type="text" [(ngModel)]="celsius" > <br>
-Fahrenheit:
-<label for="">{{convertCelciusToFahrenheit()}}</label><br> 
 
-<input type="text" [(ngModel)]="fahrenheit1" > <br>
-Celsius:
-<label for="">{{convertFahrenheitToCelcius()}}</label>  -->
 
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div id="container">
+  <div class="d-flex justify-content-center align-items-center vh-100" >
     <div class="text-center">
       <div class="form-group">
         <label for="celsius">Celsius:</label>
-        <input type="text" [(ngModel)]="celsius" class="form-control" id="celsius">
+        <input type="text" [(ngModel)]="celsius" class="form-control" id="celsius" placeholder="Enter value in Celsius:">
         <p>Fahrenheit: {{convertCelciusToFahrenheit()}} <sup>0</sup> F</p>
       </div>
   
       <div class="form-group">
         <label for="fahrenheit">Fahrenheit:</label>
-        <input type="text" [(ngModel)]="fahrenheit1" class="form-control" id="fahrenheit">
+        <input type="text" [(ngModel)]="fahrenheit1" class="form-control" id="fahrenheit" placeholder="Enter value in Fahrenheit:">
         <p>Celsius: {{convertFahrenheitToCelcius()}} <sup>0</sup> C</p>
       </div>
     </div>
   </div>
+</div>
